--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -1478,9 +1478,6 @@ $ribbon-padding: 100px;
 
 // Cookies Bar
 #website_cookies_bar {
-    :not(.o_cookies_popup) {
-        bottom: 0;
-    }
     .o_cookies_discrete {
         .js_close_popup.o_cookies_bar_text_button, .o_cookies_bar_text_policy {
             @include media-breakpoint-down(lg) {
